# idle_apocalypse_optim

./: .gitignore  Cargo.toml  LICENSE  README.md  game.py  improve  play  play.py  read_csv.py  read_yaml.py  upg_seq.py
g/: aqua-adventure.csv  happy-time.csv  lost-in-time.csv  other_tower.csv  sid-in-space.csv
idlea/: Cargo.toml  rustfmt.toml
idlea/src/: game.rs  game_state.rs  improve.rs  lib.rs  main.rs  play.rs  read_csv.rs  read_yaml.rs  upg_seq.rs
p/: my-lit-d2.yaml  my-ot.yaml
study/: best_rates.ipynb
